resources/sass/site2.scss
/* ... */
.icon-list {
  display: flex;
  flex-direction: row;
  width: 100%;
  .material-icons {
    margin-right: 1rem;
    align-self: flex-start;
  }
  .icon-list-text {
    flex: 1;
  }
}

.changeset-row {
  cursor: pointer;
}

.scenarios-content {
  padding: 0px;

  table {
    border-spacing: 0;
    font-size: 16px;
    margin: 0;
    padding: 0;
    width: 100%;

    caption{
      padding: 32px 72px;
      color: #000000;
      font-size: 20px;
      text-align: left;

    }

    thead {

      tr > th {
        border-bottom: 1px solid #ccc;
        white-space: nowrap;
      }

      th {
        color: #999999;
        text-align: left;
        padding: 24px 20px;
        font-weight: 500;
      }
    }

    tbody tr {
      cursor: pointer;

      &:hover {
        background-color: #f5f5f5;
      }
    }

    tr > td {
      border-bottom: 1px solid #eee;
      padding: 20px;
      height: 50px;
    }


    .col1{
      width: 15%;
      text-align: left;
    }

    .col2{
      width: 10%;
      text-align: right;
    }

    .col3{
      width: 15%;
      text-align: right;
    }

    .col4{
      text-align: left;
      width: 60%;
    }
  }
}

.mdc-toolbar__title {
  .breadcrumb-menu {
    margin: -5px 0 0;
    padding: 0;

    li {
      display: inline;

      a {
        @include link-color(#9a9a9a);
      }

      i {
        color: #9e9e9e;
        transform: translateY(5px);
        transform: translateY(5px);
      }
    }
  }
}

.project-settings-section {
  display: inherit;
  flex-flow: inherit;
  margin: 0 0 50px;

  .step-header {
    h2 {
      margin-bottom: 0;
    }
  }
  .step-info {
    line-height: 1.9rem;
    margin: 1.2rem 0 3rem;
  }

  .mdc-select {
    margin-top: 16px;
    margin-bottom: 10px;
  }

  .no-provider-set-selected {
    color: rgba(0, 0, 0, 0.6);
    margin: 25px 0 0;
  }

  button {
    display: inline-flex;
    align-items: center;
    .material-icons {
      margin-right: 10px;
    }
  }
}

.project-settings-actions {
  text-align: right;

  padding: 25px 35px;
  border-top: 1px solid #e0e0e0;

  button {
    margin-left: 25px;
    &:first-child {
      float: left;
      margin: 0;
    }
  }
}

.empty-list-container {
  position: relative;
  width: 100%;

  .empty-list {
    color: #AAA;
    font-size: 24px;
    position: absolute;
    text-align: center;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;

    button {
      background: transparent;
      color: $mdc-theme-primary;
      font-size: 26px;
      font-weight: 400;
      text-transform: inherit;
    }
  }
}

.invalid-input{
  @include mdc-text-field-ink-color(#FF5722)
}

.disable-a{
  text-decoration: none;
}

.center-download-icon{
  margin-bottom: 15px;
  margin-top: 15px;
  margin-left: 16px;
  margin-right: 15px;
}

.project-setting {
  max-width: 554px;
}
.project-setting-title {
  p {
    display: inline-flex;
    align-items: flex-start;
    .material-icons {
      margin-right: 10px;
    }
  }
}

.coverage-setting {
  p, label {
    color: rgba(0, 0, 0, 0.6);
    font-size: 0.75rem;
  }
  .mdc-slider .mdc-slider__pin {
    background-color: transparent;
    color: $mdc-theme-primary;
    top: 24px;
    transform: rotate(-45deg);
    > .mdc-slider__pin-value-marker::selection {
      // remove selection color in firefox
      background-color: transparent;
    }
  }
}

.action-input {
  max-width: 100px;
}
.percentage-input {
  display: inline-flex;
  align-items: end;
  div {
    margin-right: 0.8rem;
    > input {
      max-width: 50px;
    }
  }
}

.prefix {
  color: #999999;
  font-style: normal;
  position: absolute;
  padding-bottom: 8px;

  + input {
    padding-left: 15px;
  }
  + .suffix {
    + input {
      padding-left: 1rem;
    }
  }
}
.suffix {
  @extend .prefix;
  left: auto;
  right: 0;
  + input {
    padding-right: 1rem;
    padding-left: 0;
  }
}

//empty projects

.md-icon-96 {
  font-size: 96px !important;
}
.message-margin{
 margin-bottom: 7px;
}
.crosshair-pointer {
  cursor: crosshair;
}

.info-computing-best-location {
  background-color: #404040;
  margin: 7px 15px;
  padding: 7px 10px;
  color: #FFF;
  font-weight: 500;
}

.border-btn-floating {
    position: absolute;
    right: 1rem;
    margin-top: -2.5rem;
    z-index: 2;
    border-radius: 50%;
    padding: 3px;

    .btn-floating {
        z-index: 2;
        border: 1px solid #FFF;
        box-shadow: none;
    }
}

.border-btn-floating-animated {
    background: linear-gradient(0deg, #ff7710, #FFF, #FFF);
    animation: rotate-background .5s ease 1 forwards;

    animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
}

@keyframes rotate-background {
  0% {
    background: linear-gradient(0deg, #ff7710 , #FFF, #FFF);
  }
  12% {
    background: linear-gradient(45deg, #ff7710 , #FFF, #FFF);
  }
  25% {
    background: linear-gradient(90deg, #ff7710 , #FFF, #FFF);
  }
  37% {
    background: linear-gradient(135deg, #ff7710 , #FFF, #FFF);
  }
  50% {
    background: linear-gradient(180deg, #ff7710 , #FFF, #FFF);
  }
  62% {
    background: linear-gradient(225deg, #ff7710 , #FFF, #FFF);
  }
  75% {
    background: linear-gradient(270deg, #ff7710 , #FFF, #FFF);
  }
  82% {
    background: linear-gradient(315deg, #ff7710 , #FFF, #FFF);
  }
  100% {
    background: linear-gradient(360deg, #ff7710 , #FFF, #FFF);
  }
}
.raise-alert{
  background-color: #ff561c;
  padding: 4px;
  margin-top: 32px;

  @include mdc-elevation(4);
    &:hover {
      border: 1px dashed #ff561c;
      background-color:  #ff7710;
    }
  }

.card-message{
    background-color: #FFF;
    $card-radius: 4px;
    @include mdc-elevation(1);
    @extend .mdc-elevation-transition;
    justify-content: center;

    .content {
      padding:16px;
    }
    .bottom-button{
      width: 100%;
    }
}
/* ... */

